# Pijin_Treasury_Portal

./: .antigravityignore  .gitignore  ARCHITECTURE.md  GEMINI.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  skills-lock.json  tsconfig.json  vercel.json
.github/workflows/: backup.yml  ci.yml  merge.yml
contracts/: Cargo.toml
contracts/src/: lib.rs  test.rs
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/(dashboard)/: DashboardShell.tsx  layout.tsx
src/components/domain/: ActivityRow.tsx  GatewayNodeCard.tsx  NetworkHealthPanel.tsx  PinConfirmDialog.tsx  RegisterNodeForm.tsx  StatCard.tsx  TransactionRow.tsx  TransferForm.tsx  WalletBalanceCard.tsx
src/components/layout/: Sidebar.tsx  Topbar.tsx
src/components/ui/: EmptyState.tsx  SkeletonCard.tsx  sonner.tsx
src/core/constants/: index.ts
src/core/providers/: WalletProvider.tsx
src/core/types/: index.ts
src/core/utils/: index.ts
src/core/validators/: auth.ts
src/hooks/: useContractLedger.ts  useGatewayNodes.ts  useNetworkHealth.ts  useStellarWallet.ts  useTransactionLedger.ts  useTransfer.ts  useTreasuryBalance.ts
src/infrastructure/api/: mockData.ts
src/infrastructure/config/: server.ts
src/infrastructure/helpers/: contractSimulation.ts  requireEnv.ts
src/infrastructure/stellar/: balance-sync.ts  event-decoder.ts  horizon.ts  (+2 more)
src/lib/: supabase.ts
supabase/migrations/: 20260714_add_node_balance_cache.sql  20260714_nodes_region_fk.sql  20260715_contract_events.sql  20260715_treasury_transfers.sql
(+21 files in other folders)
